--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-vue": "^3.0.1",
         "axios": "^0.27",
-        "laravel-vite-plugin": "^0.5.0",
+        "laravel-vite-plugin": "^0.5.2",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "vite": "^3.0.0"
+        "vite": "^3.0.4"
     }
 }
